# Ecommerce-Backend-Application

./: .gitignore  .pdm-python  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
app/: config.py  database.py  dependencies.py  main.py
app/models/: base.py  cart.py  order.py  product.py  user.py
app/routes/: auth.py  cart.py  order.py  product.py
app/schemas/: cart.py  order.py  product.py  user.py
app/services/: auth.py  cart.py  order.py  product.py
app/utils/: file_upload.py  security.py
migrations/: env.py
migrations_backup/: env.py
